--- a/school_Info.html
+++ b/school_Info.html
@@ -29,7 +29,7 @@
         <a href="index.html">Home</a>
         <a href="school_Info.html">School Info</a>
         <a href="school_details.html">Admissions</a>
-        <a href="#">Contact</a>
+        <a href="Contact.html">Contact</a>
         <a href="Map.html">Map</a>
       </div>
 
@@ -191,7 +191,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="school_Info.html">School Info</a></li>
           <li><a href="school_details.html">Admission</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="Contact.html">Contact</a></li>
           <li><a href="Map.html">Map</a></li>
         </ul>
       </div>
