--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>School Website</title>
-  <!-- Bootstrap CSS -->
+
   <link rel="stylesheet" href="assest/bhootstrap/bootstrap-5.0.2-dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="./assest/css/style.css" />
   <link rel="stylesheet" href="./assest/fontawasome/css/all.min.css">
@@ -13,7 +13,7 @@
 <body>
 
   <!-- HEADER -->
-<header>
+<header> 
   <nav>
     <div class="navbar">
       <div class="logo">
@@ -48,7 +48,7 @@
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true"></button>
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></button> 
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
@@ -112,7 +112,7 @@
     <p>Schools Info is a student-built platform aimed at helping parents and students easily find verified and top-rated schools in Karachi. Our mission is to make the school admission process easier, quicker, and more transparent.</p>
   </section>
 
-  <!-- NEW: TESTIMONIALS SECTION -->
+  
   <section id="testimonials" class="testimonial-section">
     <h2>What Parents Say</h2>
     <div class="testimonial-container">
@@ -197,6 +197,8 @@
           <li><a href="school_details.html">Admission</a></li>
           <li><a href="Contact.html">Contact</a></li>
           <li><a href="Map.html">Map</a></li>
+          <li><a href="sitemap.html">sitemap.html</a></li>
+
         </ul>
       </div>
     </div>
