--- a/Map.html
+++ b/Map.html
@@ -382,7 +382,9 @@
           <li><a href="school_Info.html">School Info</a></li>
           <li><a href="school_details.html">Admission</a></li>
           <li><a href="Contact.html">Contact</a></li>
-          <li><a href="Map.html">Map</a></li>
+          <li><a href="Map.html">Map</a></li> 
+          <li><a href="sitemap.html">sitemap.html</a></li>
+
         </ul>
       </div>
     </div>
