--- a/school_details.html
+++ b/school_details.html
@@ -530,6 +530,8 @@ As one of Pakistan's oldest and most prestigious institutions, Karachi Grammar S
           <li><a href="school_details.html">Admission</a></li>
           <li><a href="Contact.html">Contact</a></li>
           <li><a href="Map.html">Map</a></li>
+          <li><a href="sitemap.html">sitemap.html</a></li>
+
         </ul>
       </div>
     </div>
